--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,37 @@ body {
     background-color: lavender;   
     color: darkblue;
 }
+
+
+/* header section */
+
+#logo {
+    float: left;
+    font-size: 200%;
+    margin-left: 30px;
+    box-sizing: border-box;
+}
+
+#logo, #theme-selector {
+    line-height: 65px;
+    margin-bottom: 20px;
+    /*zoom effect on loading*/
+    animation-name: zoom;
+    animation-duration: 2s;
+}
+
+#theme-selector {
+    letter-spacing: 3px;
+    float: right;
+    margin-right: 30px;
+    box-sizing: border-box;
+}
+
+#theme-selector button {
+    font-size: 120%;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+    background-color: black;
+}
