Add animation to logo and themeselector

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,13 @@ body {
     color: white;
     background-color: black;
 }
+
+/* Zoom Animation*/
+@keyframes zoom {
+    from {
+        transform:scale(.1);
+    }
+    to {
+        transform:scale(1);
+    }
+}
