Add style to overlay div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,3 +206,19 @@ td:first-child, th:first-child,td:last-child, th:last-child {
     color: darkblue;
     clear: both;
 }
+
+
+/* overlay div */
+
+#overlay {
+    position: fixed;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0, 0,0.5);
+    pointer-events: all;
+    z-index: 9;
+    display: none;
+}
