--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,3 +222,36 @@ td:first-child, th:first-child,td:last-child, th:last-child {
     z-index: 9;
     display: none;
 }
+
+
+
+/*first task and new task entry boxes*/
+
+#task-entry-box, #new-task-box {
+    width:70%;
+    height:100px;
+    right: 15%;
+    left: 15%;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 150%;  
+    margin-bottom: 10px;
+}
+
+#task-entry-box:focus, #new-task-box:focus {
+    outline: none;
+    border: 2px solid darkblue;
+}
+
+#submit-task-button,#submit-new-task-button {
+    color: darkblue;
+    font-size: 120%;
+    font-weight: bolder;
+    padding:5px;
+    border: 2px solid darkblue;
+    border-radius: 15px;
+    display: block;
+    margin: auto;
+}
+
+
